[#12] Workaround for issue with basicGrids' size which would create scrollbars
The problem is that flot ends up drawing over the limits of the canvas
depending on the content. Our workaround is to make the charts a bit smaller
(95% width), so that we have a bit of space to spare, in case it happens.

This doesn't fix the issue, but at least makes it harder to appear.

--- a/ckanext/basiccharts/theme/public/basiccharts.css
+++ b/ckanext/basiccharts/theme/public/basiccharts.css
@@ -7,12 +7,13 @@
 }
 
 .dashboard-grid .basicChart {
-  height: 99%;
-  width: 100%;
+  height: 100%;
+  width: 95%;
 }
 
 .dashboard-grid .basicChart.pie {
   width: 90%;
+  margin: auto;
 }
 
 .basicChart .pieLabel div {
